@@ -35,6 +35,8 @@ TASpring change log
 
 - Calling emit-sfx 2048 from a script will now allways fire the weapon. Emit-sfx 4096 will now take over the previous behavior of detonating the weapon at the piece position.
 
+- Added unit FBI tag UnitRestricted to limit the number of a unit type allowed in a game.
+
 
 0.73b1
 
